--- a/resources/private/company/company.html
+++ b/resources/private/company/company.html
@@ -201,8 +201,10 @@
             <button class="btn btn-primary"
                     data-test-id="company-add-user"
                     data-bind="click: openNewUser,
-                               ltext: 'register.company.add-user.open',
-                               enable: lupapisteApp.models.globalAuthModel.ok('company-add-user')" ></button>
+                               enable: lupapisteApp.models.globalAuthModel.ok('company-add-user')">
+              <i class="lupicon-circle-plus"></i>
+              <span data-bind="ltext: 'register.company.add-user.open'"></span>
+            </button>
             <span class="user-limit-reached"
                   data-bind="ltext: 'register.company.user-limit.reached',
                              visible: isAdmin && !lupapisteApp.models.globalAuthModel.ok('company-add-user')"></span>
@@ -219,47 +221,83 @@
       <div class="dialog-content">
         <form>
           <label data-bind="ltext: 'company.user.email'" class="form-label tip"></label>
-          <input data-bind="textInput: email, enable: emailEnabled" class="form-input" type="text" data-test-id="company-new-user-email"/>
-
-          <div data-bind="visible: showSearchEmail">
-            <button data-bind="enable: canSearchUser, click: searchUser" type="submit" class="positive btn-dialog" data-test-id="company-search-email">
+          <input data-bind="textInput: email, enable: emailEnabled" class="form-input"
+                 type="text" data-test-id="company-new-user-email"/>
+          <div data-bind="visible: showSearchEmail" class="inner-margins dialog-content__footer">
+            <button data-bind="enable: canSearchUser, 
+                               click: searchUser,
+                               css: {waiting: pending}"
+                    type="submit"
+                    class="positive"
+                    data-test-id="company-search-email">
+              <i class="lupicon-search"></i>
+              <i class="wait spin lupicon-refresh"></i>
               <span data-bind="ltext: 'register.company.add-user.searchUser'"></span>
-              <em data-bind="visible: pending" class="button-loader" style="position: relative;"></em>
             </button>
-            <button data-bind="ltext: 'cancel'" class="secondary btn-dialog close"></button>
+            <button class="secondary close">
+              <i class="lupicon-remove"></i>
+              <span  data-bind="ltext: 'cancel'"></span>
+            </button>
           </div>
         </form>
 
         <div data-bind="visible: showUserInCompany">
           <span data-bind="ltext: 'register.company.add-user.already-in'"></span>
-          <button data-bind="ltext: 'ok'" class="secondary btn-dialog close" data-test-id="company-add-user-already-in-close"></button>
+          <div class="dialog-content__footer">
+            <button class="positive close"
+                    data-test-id="company-add-user-already-in-close">
+              <i class="lupicon-check"></i>
+              <span  data-bind="ltext: 'ok'"></span>
+            </button>
+          </div>
         </div>
 
         <div data-bind="visible: showUserAlreadyInvited">
-          <span data-bind="ltext: 'register.company.add-user.already-invited'"></span>
-          <button data-bind="ltext: 'ok'" class="secondary btn-dialog close"></button>
+          <span data-bind="ltext: 'register.company.add-user.already-invited'"></span>        
+          <div class="dialog-content__footer">
+            <button class="positive close"
+                    data-test-id="company-user-already-invited-close-dialog">
+              <i class="lupicon-check"></i>
+              <span  data-bind="ltext: 'ok'"></span>
+            </button>
+          </div>
         </div>
 
         <div data-bind="visible: showUserInvited">
           <h3 data-bind="ltext: 'register.company.add-user.done.header'" data-test-id="company-old-user-invited"></h3>
           <p data-bind="ltext: 'register.company.add-user.done.message'"></p>
           <p data-bind="ltext: 'register.company.add-user.done.canClose'"></p>
-          <button data-bind="ltext: 'ok'" class="secondary btn-dialog close" data-test-id="company-old-user-invited-close-dialog"></button>
+          <div class="dialog-content__footer">
+            <button class="positive close"
+                    data-test-id="company-old-user-invited-close-dialog">
+              <i class="lupicon-check"></i>
+              <span  data-bind="ltext: 'ok'"></span>
+            </button>
+          </div>
         </div>
 
         <form data-bind="visible: showUserDetails" id="companyUserDetails">
 
           <label data-bind="ltext: 'company.user.firstName'" class="form-label tip"></label>
-          <input data-bind="textInput: firstName" class="form-input" type="text" data-test-id="company-new-user-firstname"/>
+          <input data-bind="textInput: firstName,
+                            disable: done"
+                 class="form-input" type="text" data-test-id="company-new-user-firstname"/>
 
-          <label data-bind="ltext: 'company.user.lastName'" class="form-label tip"></label>
-          <input data-bind="textInput: lastName" class="form-input" type="text" data-test-id="company-new-user-lastname"/>
+          <label data-bind="ltext: 'company.user.lastName'"
+                 class="form-label tip"></label>
+          <input data-bind="textInput: lastName,
+                            disable: done"
+                 class="form-input" type="text" data-test-id="company-new-user-lastname"/>
           <div class="checkbox-wrapper checkbox-wrapper--break-small">
-            <input data-bind="checked: admin" class="form-input" type="checkbox" id="register.company.add-user.admin"/>
+            <input data-bind="checked: admin,
+                              disable: done"
+                   class="form-input" type="checkbox" id="register.company.add-user.admin"/>
             <label data-bind="ltext: 'register.company.add-user.admin'" class="checkbox-label" for="register.company.add-user.admin"></label>
           </div>
           <div class="checkbox-wrapper">
-            <input data-bind="checked: submit" class="form-input" type="checkbox" id="register.company.add-user.can-submit"/>
+            <input data-bind="checked: submit,
+                              disable: done"
+                   class="form-input" type="checkbox" id="register.company.add-user.can-submit"/>
             <label data-bind="ltext: 'register.company.add-user.can-submit'" class="checkbox-label" for="register.company.add-user.can-submit"></label>
           </div>
 
@@ -276,13 +314,20 @@
             <p data-bind="ltext: 'register.company.add-user.done.canClose'"></p>
           </div>
 
-          <div>
-            <button data-bind="enable: canSubmit, click: submit, ltext: 'register.company.add-user.submit'" type="submit" class="positive btn-dialog" data-test-id="company-user-submit"></button>
-            <button data-bind="enable: canClose, ltext: 'close'" class="secondary btn-dialog close" data-test-id="company-new-user-invited-close-dialog"></button>
+          <div class="inner-margins dialog-content__footer">
+            <button data-bind="enable: canSubmit, click: sendInvite" type="submit"
+                    class="positive" data-test-id="company-user-submit">
+              <i class="lupicon-envelope"></i>
+              <span data-bind="ltext: 'register.company.add-user.submit'"></span>
+            </button>
+            <button data-bind="enable: canClose" class="secondary close"
+                    data-test-id="company-new-user-invited-close-dialog">
+              <i class="lupicon-remove"></i>
+              <span  data-bind="ltext: 'close'"></span>
+            </button>
           </div>
         </form>
       </div>
-
     </div>
   </section>
 </body>
